tests/compilefail61.out
[1mtests/compilefail61.pas:11:14: [0m[1m[91merror:[0m Cannot assign value 'hello!' of type _string literal to type mystring
    11 | 	alpha := 'hello!';  {needed to be padded with spaces to a length of 10}